welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  while(!estSurBiscuit()){
  avance()
  var a=getCouleurSol()
    if(a==Color.green){
      avance()
    }else{
      gauche()
      avance()
    }
  }
}